# azuki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  cmake  deploy.sh  docker-compose.yml  justfile  update.sh
.cargo/: config.toml
.github/workflows/: docker.yml
crates/: AGENTS.md
crates/azuki/: AGENTS.md  Cargo.toml  build.rs
crates/azuki-bot/: AGENTS.md  Cargo.toml
crates/azuki-bot/src/: commands.rs  embed.rs  handler.rs  lib.rs  messages.rs  voice.rs
crates/azuki-db/: AGENTS.md  Cargo.toml
crates/azuki-db/src/: config.rs  lib.rs  models.rs
crates/azuki-db/src/queries/: favorites.rs  history.rs  mod.rs  playlists.rs  preferences.rs  queue.rs  tracks.rs  users.rs
crates/azuki-media/: AGENTS.md  Cargo.toml
crates/azuki-media/src/: lib.rs  metadata.rs  store.rs  types.rs  upload.rs  url_detect.rs  youtube.rs  ytdlp.rs  ytdlp_updater.rs
crates/azuki-player/: AGENTS.md  Cargo.toml
crates/azuki-player/src/: actor.rs  controller.rs  controller_tests.rs  events.rs  lib.rs  multi_queue.rs  queue.rs  queue_tests.rs
crates/azuki-web/: AGENTS.md  Cargo.toml
crates/azuki-web/src/: auth.rs  events.rs  guild.rs  lib.rs  ws.rs
crates/azuki-web/src/routes/: admin.rs  content.rs  favorites.rs  mod.rs  player.rs  playlists.rs  preferences.rs  queues.rs  stats.rs
crates/azuki-web/tests/: test_auth_guild.rs  test_content.rs  test_guild_cache.rs  test_middleware.rs  test_player.rs  test_settings.rs  test_ws.rs
crates/azuki-web/tests/common/: mod.rs
crates/azuki/src/: main.rs  setup.rs
deploy/: AGENTS.md  setup.sh  update.sh
deploy/nginx/: nginx.conf  update-cloudflare-ips.sh
deploy/nginx/conf.d/: azuki.conf
deploy/nginx/snippets/: cloudflare-realip.conf
frontend/: AGENTS.md  DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: AGENTS.md  App.tsx  index.css
frontend/src/components/: AGENTS.md
frontend/src/components/features/: AGENTS.md
frontend/src/components/features/onboarding/: WelcomeModal.tsx
frontend/src/components/features/player/: PlayerBar.tsx  index.ts
frontend/src/components/features/queue/: QueueItem.tsx  QueuePanel.tsx  index.ts
frontend/src/components/features/search/: SearchPage.tsx  SearchResult.tsx  index.ts
frontend/src/components/features/upload/: UploadMetadataModal.tsx
frontend/src/components/features/uploads/: UploadsPage.tsx
frontend/src/components/features/video/: VideoPlayer.tsx
frontend/src/components/layout/: AGENTS.md  AppShell.tsx  MobileTabBar.tsx  Sidebar.tsx  index.ts
frontend/src/components/ui/: AGENTS.md  Avatar.tsx  Button.tsx  ConnectionStatus.tsx  DropOverlay.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Slider.tsx  Toast.tsx  Tooltip.tsx  TrackThumbnail.tsx  index.ts
frontend/src/hooks/: AGENTS.md  useAnimatedList.ts  useFileDrop.ts  useInfiniteScroll.ts  useKeyboardShortcuts.ts  useLocale.ts  usePasteDetection.ts  usePlayer.ts  useTheme.ts  useToast.tsx  useWebSocket.ts
frontend/src/lib/: AGENTS.md  api.ts  oembed.ts  types.ts  url.ts  utils.ts
frontend/src/locales/: AGENTS.md  en.ts  index.ts  ko.ts
frontend/src/pages/: AGENTS.md  Favorites.tsx  Help.tsx  History.tsx  Home.tsx  Login.tsx  Playlists.tsx  Search.tsx  Settings.tsx  Setup.tsx  Stats.tsx  Uploads.tsx
frontend/src/stores/: AGENTS.md  authStore.ts  downloadStore.ts  importStore.ts  playerStore.ts
migrations/: 001_initial.sql  002_app_config.sql  003_user_preferences.sql  004_volume_refactor.sql  005_dedup_play_history.sql  006_queue_persistence.sql  007_history_embed.sql  008_upload_ownership.sql  011_listened_ms.sql  012_backfill_listened_ms.sql  013_played_at_index.sql  014_theme_modes.sql  015_multi_queue_playlists.sql  016_drop_playlists.sql  017_user_locale.sql  AGENTS.md
workflows/: docker.ts
