[package]
name = "azuki-player"
edition.workspace = true
version.workspace = true

[dependencies]
azuki-db = { path = "../azuki-db" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
