[package]
name = "azuki-web"
edition.workspace = true
version.workspace = true

[dependencies]
azuki-db = { path = "../azuki-db" }
azuki-player = { path = "../azuki-player" }
azuki-media = { path = "../azuki-media" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
secrecy.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
cookie.workspace = true
sqlx.workspace = true
anyhow.workspace = true
dashmap.workspace = true
base64.workspace = true
chrono-tz = "0.10"
regex = "1"
